# ChangeLog for dev-python/paver
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/paver/ChangeLog,v 1.39 2014/06/19 11:24:20 klausman Exp $

  19 Jun 2014; Tobias Klausmann <klausman@gentoo.org> paver-1.2.2.ebuild:
  Keyworded on alpha, bug #454638

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> paver-1.1.1-r1.ebuild,
  paver-1.2.0.ebuild, paver-1.2.1.ebuild, paver-1.2.2.ebuild:
  Add support for the new PyPy slotting.

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> paver-1.2.2.ebuild:
  Stable for x86, wrt bug #502788

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> paver-1.2.2.ebuild:
  amd64 stable, bug #502788

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> paver-1.2.1.ebuild:
  x86 stable wrt bug #495598

  14 Feb 2014; Akinori Hattori <hattya@gentoo.org> paver-1.1.1-r1.ebuild,
  paver-1.1.1.ebuild, paver-1.2.0.ebuild, paver-1.2.1.ebuild,
  paver-1.2.2.ebuild:
  keyword ~ia64 wrt bug #454638

*paver-1.2.2 (14 Jan 2014)

  14 Jan 2014; Patrick Lauer <patrick@gentoo.org> +paver-1.2.2.ebuild:
  Bump

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> paver-1.1.1-r1.ebuild,
  paver-1.2.0.ebuild, paver-1.2.1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  29 Jul 2013; Ian Delaney <idella4@gentoo.org> paver-1.2.1.ebuild:
  Rm redundant DOCS var

*paver-1.2.1 (06 Jun 2013)

  06 Jun 2013; Patrick Lauer <patrick@gentoo.org> +paver-1.2.1.ebuild:
  Bump

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> paver-1.1.1-r1.ebuild:
  Stable for x86, wrt bug #461156

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> paver-1.1.1-r1.ebuild:
  Stable for amd64, wrt bug #461156

  22 Apr 2013; Ian Delaney <idella4@gentoo.org> paver-1.2.0.ebuild:
  add missing dep, fixes Bug

  27 Mar 2013; Sergey Popov <pinkbyte@gentoo.org> paver-1.2.0.ebuild:
  Add ~arm keyword, wrt bug #454638

*paver-1.2.0 (14 Mar 2013)

  14 Mar 2013; Mike Gilbert <floppym@gentoo.org>