@@ -15,24 +15,24 @@ EBUILD postfix-2.10.2.ebuild 9627 SHA256 b5a63215a67c7a0e6a7bd5e362fe5d3020dcf42
 EBUILD postfix-2.10.3.ebuild 9626 SHA256 fa300b3b8fa952620ff44815c23c5145ad9dfe54e7ccf3a31ea66039baa50d24 SHA512 16c41698d703853dc8536b11ba84d8f7c7eb1e7fe402dd8c7c45be2f49b3bccf29f3ddbc5be00610472eb2c3eafe271709a751e63f191ce187329cd2932b8c75 WHIRLPOOL 84543aed5fda5b3f881ff7ec44e70b0a6956f68fe1b0358f2be911ca49a073f0d6c88ae430655a66a47aabff01cfacc26321461618a4018afa227e77d584e26a
 EBUILD postfix-2.11.1-r1.ebuild 9766 SHA256 ee9793e0bac46ab1a53497d5ce4d33e7416720bfcd7612006f2d414ecc3d6a51 SHA512 fc6f35fc0b8f1bdb7a74517ce8b61f9035d358327db03a33cab120e5c3e5a867eea0591ce0e6bba83287495898324ed251ce08a0936d2cde515a969e5821e1c0 WHIRLPOOL 2d5729ffd59d6ae414057679104885e86e63452e516c22aae3ae73f1cffa2f4cab337f49fac6254d1287bc10448b0f2875205b7c3a39b323b0ba1891708ab167
 EBUILD postfix-2.11.1.ebuild 9712 SHA256 62db63ee2c6493f4019077606710d6c4eb5e7444a3be53d8d8691f6161532fe4 SHA512 9f0c4062466189964161ccd19a3cc7442aaef9a01b9c27652c37bf5ce375c78b314ff33ec61eace30aa4b463f93b34b81b61d850c766c20d2f17e68c8b3dc3c6 WHIRLPOOL df19f8cc6aabbcadc8cc750c8b3f33858d0784086d4a62cf50cc41cb19d7128d458b99953195a3fc671cc7bc3fc5ec6725165d7560d4e7385afa530751b0b883
-EBUILD postfix-2.12_pre20140801.ebuild 9446 SHA256 d6eaa7fad2dc80aece6fe65dfa8af794bcd1cb05ab63fee2c0d8233254149228 SHA512 e87edb90babfe0e9c204c87c07b0de6af38a6b28c66d837a1fad84717ee112dc680c82a763950273a184a8108c597dd9626d85b0d3af3a17ff3bd33199ab6440 WHIRLPOOL 240282fd6ba0b73398be1fcbf539f4bf8cb45398f8b02de8f4d258e2b3bfc51db10e1157d3e54e8f5606324eb9d345da2f7bc8281f8c5e91acf3428485cd93b4
-MISC ChangeLog 6260 SHA256 519704b8ab8763c8ac6bbda87388a361c40881d6b8ee3331266379e1e92fb224 SHA512 aa19ad87b4c340c07ea1ae62ccfd37dbf0a4eb7ac00312f558561a35d40b48e3fce3ff90123a3317dfcf553487d2eea1af865852e58b3615f727863023064607 WHIRLPOOL 229b8f857691512690a99d5cfb5e970fd9aa8340a599c30a86265e72d9ab80af4894c0a6be8ec07e28886d43470a784b5a61bfc8a9d5515430823f2039d47437
+EBUILD postfix-2.12_pre20140801.ebuild 9483 SHA256 c55d30b966b13a5332f5d8e4c0862b26643bec7c80b6bb8d6e4af84c195efe79 SHA512 1cc4d8bf69699bcf7226b82cbe466ccaf16d4d754a5b226b7e414709c9a5fd33827297138010854130549bc46099b6c4b358f9a1045d1969cc04689f63d0ac1e WHIRLPOOL 17b234622d3aa34c995027a94654e92b250155eca6ed0b325fffd758af8677ee0f7deef4727686c82ff32e9d0328b01af706768de60b6895fe029b1d55fa2519
+MISC ChangeLog 6371 SHA256 b9e447fa21302be2f0a3d9ae199eb54ea1962d51d64caa0aa4905642132ebd7e SHA512 f90f119eda677b885ed46d7ea1ba7f604e08ba8b0b6fef8399f570a845c97e76b6b782881fc07cb419e4c54c812bc2e8c5c8455f62bb5d4e50358c953476db2c WHIRLPOOL 392ed31bdc35aa6845381b653947266a60e678f268ab7be57c6d0963983396437ec8f0f794bbc53679d486aee9885c827667c7890c1867b9811423440e866092
 MISC ChangeLog-2013 100301 SHA256 439e93c3f6ea08471888157d2347da51181aa9031d4bfdeef2197a6b26680246 SHA512 c678433163e86def50d59e47d7a1a0e8f4c4af860f80932255a7c95544e1f5b55a70b68905b02a417b2332bcf3aaa59281814d8504d70085f0874a23faa2bf02 WHIRLPOOL 15a12897a576cf98d856c551157b72b47aa45fd61d05c6ed55033ce37ce247045c6bcc8143b7ccce4666900d85e0a04087c977a311e31c20f554a991bec74fbc
 MISC metadata.xml 754 SHA256 52b30e7748a792a156ad44b46878b67cb1a359c882e03f76b1d7b3b0bf111129 SHA512 bef165b527524efdcabce97c2fc0735f784dfc014ae810294e6a19b534edc6a01e14e532d730c8b8c2b76c99dafac672074317ec6dc23942285ad27895fd7220 WHIRLPOOL 702d14bd15db16217c664a39534bd1b19774d5f6c5a4a2a43e6595f400c06332c56849fd0d722c7982f5c40398b4bb0b3398b96c6f370a57d99d323d0e84ab51
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT87hZAAoJEJOE+m71LUu6IikQALK8ksVpSkYpva7Lf+VC9sLt
-kpy+pjyHbWKA+S6tUY6v4riqD0ABXc00PiYFc9TeYaSSCLVsgAExra/YmFmhDERK
-ZLAbGsVBKr1G/C/1wZmjy9ggr+QzViCwCvcNEXJO1XmHwcjI1FUtHvnIJkE/iZOV
-8nCgFn9+fKl8ZFL7IXf+7JIzsIEvCgyIJMg5P1CCcYyRZUBU+Frs3wF7+VfKn9ZB
-D4LZIMxAWyA0bpCwcIqa5PP+RAmFAIIYMrJ8GrfKpXDrxJf9OLwmFpUsfmmQchvl
-M52M8jnLIq6thZziXxbMF3+ePGxfliYB2+e3MWnsP0HJao0a4V+T9LsswQykhCUL
-+uRoOx1Fgjp+GFxbbae4gfh8VLsJmwymWJp4nffZ/rmb2AWME4kCSL/2f2P9sfVK
-/dfrQy7WD2I5lcXv+0PkTwk48XR+6hdWZ5mFWySwzB9+X2isSuIyGi/Qg/Y3nHCh
-kaKh/fbcvcpFRrFWC61PuFSI4/KK6Q4CqBz9NrPulLjAytZ6B2D8BvD1R5OBJbKa
-e0Cr+MrSukGNa32g1IPDNeoOktckrqYHXxBiZqHjR8xwyqNZkVRiNvZGhA+KOe7O
-/lFudcIuMaUfvZ+8VYFWViePSi7vHNl06wAwVgLB7qg9uVkkUOoJlL2n/2UNKaps
-wQE8PfXNrmn8VAZqTC0E
-=pWuO
+iQIcBAEBCAAGBQJT9C5BAAoJEHfx8XVYajsfACcP/Axw12mcZBu8c9mXLdHcxYjL
+s3mT2KQB1CsMsaUHMD62ZIkGVisR3VlhVtZyRi706O8xqkS9NLhPZYEQd2RA8nXC
+lu0WVlMG6U6wzwTnIHjSI9ci5R6X2dehEY3jHOgI8FU0282oiYTTuiVyNx3c6O65
+GN1RprWGkCWUb8QZORYXsG3XqkkKPqEXzFl4+ubKtYZdkrBLTpa5MFrngG66vxuk
+QW9/eL47ZaN5mMqA7+Mlrw34SA0EwRj/QhUH5pObbj1ipcOfVV6aeo5AfZ3LUNUc
+zLT4FYgIgM5Ub19O2gQpXd6drdacsXa7JbJxJBuuhO1Juzjub0aKXxyVpYJ1rZNF
+tgMybUHlXjaWaM7LXQU6CSzgt1JyoxFyqqxHwqHFse1fH2LkhgYu0micJqD4f8H4
+h5NlV3j+rr60pa9Ej4m4yCymulUBtyCi8v0NuiG18GrOmhalBm/UbaAd4GFjTJZj
+lJvlr+LuNIOmEf57W3UlstQYA2U4aU/LqXhYOpS7sc71Y+Kk47qPwdzEFvWU6wji
+b6omSh3PDtMbp+P2jhI2faXFTAb61dYsuw6rH4319jZZljtWNznOTWY0ecWTnE1F
+vVmj8rMyFuoMzIQmMVbl3IX/c7HUAdx2yMe1QF1uvAsx/yT2K9fKRnVu0lpCbYob
+kk2mavO9WsiUpD0OMyUs
+=30pn
 -----END PGP SIGNATURE-----
