@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/postfix-2.12_pre20140801.ebuild,v 1.4 2014/08/19 20:47:03 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/postfix-2.12_pre20140801.ebuild,v 1.5 2014/08/20 05:12:23 eras Exp $
 
 EAPI=5
 inherit eutils flag-o-matic multilib pam ssl-cert systemd toolchain-funcs user versionator
@@ -56,7 +56,9 @@ RDEPEND="${DEPEND}
 	!>=mail-mta/ssmtp-2.64-r2[mta]
 	!net-mail/fastforward"
 
-REQUIRED_USE="ldap-bind? ( ldap sasl )"
+# No vda support for postfix-2.12
+REQUIRED_USE="ldap-bind? ( ldap sasl )
+		!vda"
 
 S="${WORKDIR}/${MY_SRC}"
 
