@@ -7,8 +7,8 @@ IUSE=+berkdb cdb doc dovecot-sasl eai hardened ldap ldap-bind lmdb memcached mbo
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ppc ~ppc64 ~x86
 LICENSE=IBM
 RDEPEND=>=dev-libs/libpcre-3.4 dev-lang/perl berkdb? ( >=sys-libs/db-3.2 ) cdb? ( || ( >=dev-db/tinycdb-0.76 >=dev-db/cdb-0.75-r1 ) ) eai? ( dev-libs/icu ) ldap? ( net-nds/openldap ) ldap-bind? ( net-nds/openldap[sasl] ) lmdb? ( >=dev-db/lmdb-0.9.11 ) mysql? ( virtual/mysql ) pam? ( virtual/pam ) postgres? ( dev-db/postgresql-base ) sasl? ( >=dev-libs/cyrus-sasl-2 ) selinux? ( sec-policy/selinux-postfix ) sqlite? ( dev-db/sqlite:3 ) ssl? ( >=dev-libs/openssl-0.9.6g ) dovecot-sasl? ( net-mail/dovecot ) memcached? ( net-misc/memcached ) net-mail/mailbase !mail-mta/courier !mail-mta/esmtp !mail-mta/exim !mail-mta/mini-qmail !mail-mta/msmtp[mta] !mail-mta/netqmail !mail-mta/nullmailer !mail-mta/qmail-ldap !mail-mta/sendmail !mail-mta/opensmtpd !<mail-mta/ssmtp-2.64-r2 !>=mail-mta/ssmtp-2.64-r2[mta] !net-mail/fastforward
-REQUIRED_USE=ldap-bind? ( ldap sasl )
+REQUIRED_USE=ldap-bind? ( ldap sasl ) !vda
 SLOT=0
 SRC_URI=ftp://ftp.porcupine.org/mirrors/postfix-release/experimental/postfix-2.12-20140801.tar.gz vda? ( http://vda.sourceforge.net/VDA/postfix-vda-v13-2.10.0.patch )
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pam	aa1ebb3ab720ea04dbbdd6eaaf9554ed	ssl-cert	b53367370fde96e19beca78050a47c61	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=73825fafb7d2ffbdbb702a571bd175eb
+_md5_=3ee125bf6f4ae26d11318820c54c8f06
