@@ -1,13 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-EBUILD cron-0.ebuild 519 RMD160 ad4b7a54b024ca764069a38506d57dcc4d49cb8c SHA1 c816d72627fe0dffb48b25698fa847fcf6ff78a6 SHA256 504c81333dd38de1cc726790ab6a8de5433720312e40d9cc5d3766f3c1d35064
-MISC ChangeLog 419 RMD160 149a9697558bad56d0ba4f7c119a2c6336f15859 SHA1 d6aef253a8fc1a9ee4070d4c74367692f408baec SHA256 a5dbe6bf68fb2906aa5227c8fce6270d9e05d0850dc9f8221393a568cf89fab7
-MISC metadata.xml 157 RMD160 1e10f6f46ee1a967bdde81db1bb7866efef04d55 SHA1 cb0f3e43725e925f25f97c9a8192a4a83153dc86 SHA256 066d839a0f031f86c76c0157b3c8b7066e1d2001d8a6d641f4c2bbbdb713279d
+EBUILD cron-0-r1.ebuild 551 SHA256 e822e240f7f1a8f3a2ad043d1cd712d47446d1f42c2b439bdf3c67eb10da5539 SHA512 dc3132236b701e16ce49256625fc72de03dfa43020e4d2c4e0484b6e7a91d3bf39ffe3aeb4631ca1d7ac37c08e49846c9b6f87ca61886ff4919c7dd6bc398d0a WHIRLPOOL e2fc91e9955f5341fd98a77079f59cec705fd4d66c8c2386624f227c58b3efe5570f4b21691db574e673dd8712d8da4fc48667180fcb9b3bea9cc597404e002f
+EBUILD cron-0.ebuild 519 SHA256 504c81333dd38de1cc726790ab6a8de5433720312e40d9cc5d3766f3c1d35064 SHA512 a3daced73cefa94b8ac874a17d560713014fc842405a5ec583f840feb6e1bceabc416a8c8e71b19f7f69e1517ca89ce3fa5478375dbf8bf1a1db614488882c45 WHIRLPOOL 4a2b185284649334f2fa023d08f621be2ac45bde71f3556269c531e44713f006264ef383b040fd07db49c5bcffbff96ed475ac4f35ebdceb6125313575380df1
+MISC ChangeLog 713 SHA256 4ff34022de87299e14f5e1978ede425f54cce63949fcff5d0e7ae6f3bbc28eb4 SHA512 bc14ec95621546133a26406a8cb558131ca6e91974f770da60656f680cb0381bf075d925bef7ddf3894b3f9a70b91299c27c526810eb7887e8857ce008cc17fa WHIRLPOOL 4514695d6c28a1bf0922d7b32ee917858168e8baebd68ab7e409e9e7df0dd1badf10f5f45ad1d19cae0ee1a21f4cb6f13af5342e095972b4abf21ece8f48a3ce
+MISC metadata.xml 157 SHA256 066d839a0f031f86c76c0157b3c8b7066e1d2001d8a6d641f4c2bbbdb713279d SHA512 f493f758a94cd0857889d2c2dc62b5a9aa6bbb3301bd60d8336637949b6d4097fbc15f7715e05664186c5b10e173b46a17b4b9e96548923ad48d3b141ad8db32 WHIRLPOOL a57ecc72bd55ff77aca16ef8c56ea071239c73e89cbdb643e0cacb8e2c6e39085a70d55116918c1e5d98d9b5d1d2d8464c9ac84fca2ecf923372f3ac0b1fb427
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEARECAAYFAk5/oUAACgkQOeoy/oIi7uyykwCcC2UYIVF0t47o2ede8ZpPjT9c
-GeUAoKZW4fX8puf/QD7/UzJ+YaLvqyPg
-=gMa2
+iQIcBAEBCAAGBQJT9DBrAAoJEPiazRVxLXTFFfMP/2JEtzr8xnujD+UTjt8gextw
+qUsupLKYu9tDyNkZuczVUAKDwj3ggRG9/rBS+nELbamyVG6ovSh15q3YALQlBFLc
+KwaWKoG7VBU4bHDwX+QwWMNKCaGURZqd/YyYq0pG9p5XqklFADCTglxba8Norxk0
+UYCqcQ16bYfE+Fm+9BlK7G1JsoeB2RbjBkNt9us+SQkWjBgARdYtPTtcmJaXl8sf
+l+qfn7g06NVB+IPgsBbXtujL13ZUjUcXU9Yn5Nqnv9pJO6Oln2Qo4lP9/ekZaqz9
+MPLpk1JVGgNJbs9qL8eiaqm4DavBDvJ6QF2kpSObTbDMABWxtwCnIS0JKbZ8d1uT
+Knfumtx+p7zCm1KC25pE739W7Si6WHJLChZz8HFhR/mKRGQleppYAn63O/lJm7QO
+JGXkUluv3rKCMOVmNesqxyH9gl/BJLTsCk0SC9JnHMcvB2OSH64z9hp+hTgkJ+vU
++pgQRxS/loWYmmRLUdhtazswlx7cABEiPMwhUP8fdUFK55IneY+yUKcMYe1DWGA+
+RSX7EUHIzmNCBgzrznOD1MeCKWiKpucW7N0QPdQBBc/1l38hI6Knwgg2Lkb8RBsR
+W84ZTDv6tmw1u60+ZmqUBiT1ag2BBdNHXlvyOcKUKXEAy4ViBNS/lkhS0LsYgYRj
+KADhvLWhU557bC3l1CP7
+=gxDd
 -----END PGP SIGNATURE-----
