@@ -1,6 +1,9 @@
 # ChangeLog for mail-mta/postfix
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.525 2014/08/19 20:47:03 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.526 2014/08/20 05:12:23 eras Exp $
+
+  20 Aug 2014; Eray Aslan <eras@gentoo.org> postfix-2.12_pre20140801.ebuild:
+  Mask vda USE flag for postfix-2.12
 
   19 Aug 2014; Anthony G. Basile <blueness@gentoo.org> postfix-2.11.1-r1.ebuild,
   postfix-2.11.1.ebuild, postfix-2.12_pre20140801.ebuild:
