@@ -1,6 +1,13 @@
 # ChangeLog for virtual/cron
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/cron/ChangeLog,v 1.2 2011/09/25 21:39:28 ulm Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/cron/ChangeLog,v 1.3 2014/08/20 05:21:46 polynomial-c Exp $
+
+*cron-0-r1 (20 Aug 2014)
+
+  20 Aug 2014; Lars Wendler <polynomial-c@gentoo.org> +cron-0-r1.ebuild:
+  Revbump to move sys-process/cronie to the top of the list of available cron
+  implementations as discusses in gentoo-dev ml. Bumped EAPI to 4 as well.
+  Permission granted by vapier.
 
   25 Sep 2011; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
   Remove myself as maintainer.
